make settings section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="index.html">
+                    <a href="settings.html">
                         <i class="fa-solid fa-gear"></i>
                         <span>settings</span>
                     </a>
@@ -205,7 +205,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="target-row projects">
+                    <div class="target-row courses">
                         <div class="icon">
                             <i class="fa-solid fa-code fa-lg"></i>
                         </div>
@@ -578,101 +578,101 @@
                         </div>
                     </div>
                 </div>
-                <div class="projects">
-                    <h2 class="main-box-heading">projects</h2>
-                    <div class="responsive-table">
-                        <table>
-                            <thead>
-                                <tr>
-                                    <td>Name</td>
-                                    <td>Finish Date</td>
-                                    <td>Client</td>
-                                    <td>Price</td>
-                                    <td>Team</td>
-                                    <td>Status</td>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>Kann Yama Kann</td>
-                                    <td>15 May 2022</td>
-                                    <td>kann yama kann cafe</td>
-                                    <td>$2300</td>
-                                    <td>
-                                        <img src="imgs/team-01.png" alt="">
-                                        <img src="imgs/team-02.png" alt="">
-                                        <img src="imgs/team-03.png" alt="">
-                                        <img src="imgs/team-05.png" alt="">
-                                    </td>
-                                    <td>
-                                        <span>pending</span>
-                                        <i class="fa-solid fa-spinner fa-lg blue"></i>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Hyper Barber</td>
-                                    <td>24 jun 2022</td>
-                                    <td>Fadi Barber</td>
-                                    <td>$1200</td>
-                                    <td>
-                                        <img src="imgs/team-01.png" alt="">
-                                        <img src="imgs/team-02.png" alt="">
-                                        <img src="imgs/team-03.png" alt="">
-                                    </td>
-                                    <td>
-                                        <span>completed</span>
-                                        <i class="fa-solid fa-circle-check fa-lg green"></i>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Traning Studio</td>
-                                    <td>10 july 2022</td>
-                                    <td>Training Studio Gym</td>
-                                    <td>$800</td>
-                                    <td>
-                                        <img src="imgs/team-01.png" alt="">
-                                        <img src="imgs/team-02.png" alt="">
-                                    </td>
-                                    <td>
-                                        <span>In Progress</span>
-                                        <i class="fa-solid fa-bars-progress fa-lg orange"></i>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Khodor  Website</td>
-                                    <td>28 july 2022</td>
-                                    <td>Khodor</td>
-                                    <td>$400</td>
-                                    <td>
-                                        <img src="imgs/team-01.png" alt="">
-                                        <img src="imgs/team-02.png" alt="">
-                                        <img src="imgs/team-03.png" alt="">
-                                    </td>
-                                    <td>
-                                        <span>rejected</span>
-                                        <i class="fa-solid fa-circle-xmark fa-lg red"></i>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Hawraa Website</td>
-                                    <td>15 May 2022</td>
-                                    <td>hawraa</td>
-                                    <td>$2300</td>
-                                    <td>
-                                        <img src="imgs/team-01.png" alt="">
-                                        <img src="imgs/team-02.png" alt="">
-                                        <img src="imgs/team-03.png" alt="">
-                                        <img src="imgs/team-04.png" alt="">
-                                        <img src="imgs/team-05.png" alt="">
-                                    </td>
-                                    <td>
-                                        <span>completed</span>
-                                        <i class="fa-solid fa-circle-check fa-lg green"></i>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
+            </div>
+            <div class="projects">
+                <h2 class="main-box-heading">projects</h2>
+                <div class="responsive-table">
+                    <table>
+                        <thead>
+                            <tr>
+                                <td>Name</td>
+                                <td>Finish Date</td>
+                                <td>Client</td>
+                                <td>Price</td>
+                                <td>Team</td>
+                                <td>Status</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Kann Yama Kann</td>
+                                <td>15 May 2022</td>
+                                <td>kann yama kann cafe</td>
+                                <td>$2300</td>
+                                <td>
+                                    <img src="imgs/team-01.png" alt="">
+                                    <img src="imgs/team-02.png" alt="">
+                                    <img src="imgs/team-03.png" alt="">
+                                    <img src="imgs/team-05.png" alt="">
+                                </td>
+                                <td>
+                                    <span>pending</span>
+                                    <i class="fa-solid fa-spinner fa-lg blue"></i>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Hyper Barber</td>
+                                <td>24 jun 2022</td>
+                                <td>Fadi Barber</td>
+                                <td>$1200</td>
+                                <td>
+                                    <img src="imgs/team-01.png" alt="">
+                                    <img src="imgs/team-02.png" alt="">
+                                    <img src="imgs/team-03.png" alt="">
+                                </td>
+                                <td>
+                                    <span>completed</span>
+                                    <i class="fa-solid fa-circle-check fa-lg green"></i>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Traning Studio</td>
+                                <td>10 july 2022</td>
+                                <td>Training Studio Gym</td>
+                                <td>$800</td>
+                                <td>
+                                    <img src="imgs/team-01.png" alt="">
+                                    <img src="imgs/team-02.png" alt="">
+                                </td>
+                                <td>
+                                    <span>In Progress</span>
+                                    <i class="fa-solid fa-bars-progress fa-lg orange"></i>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Khodor  Website</td>
+                                <td>28 july 2022</td>
+                                <td>Khodor</td>
+                                <td>$400</td>
+                                <td>
+                                    <img src="imgs/team-01.png" alt="">
+                                    <img src="imgs/team-02.png" alt="">
+                                    <img src="imgs/team-03.png" alt="">
+                                </td>
+                                <td>
+                                    <span>rejected</span>
+                                    <i class="fa-solid fa-circle-xmark fa-lg red"></i>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Hawraa Website</td>
+                                <td>15 May 2022</td>
+                                <td>hawraa</td>
+                                <td>$2300</td>
+                                <td>
+                                    <img src="imgs/team-01.png" alt="">
+                                    <img src="imgs/team-02.png" alt="">
+                                    <img src="imgs/team-03.png" alt="">
+                                    <img src="imgs/team-04.png" alt="">
+                                    <img src="imgs/team-05.png" alt="">
+                                </td>
+                                <td>
+                                    <span>completed</span>
+                                    <i class="fa-solid fa-circle-check fa-lg green"></i>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
