--- a/settings.html
+++ b/settings.html
@@ -150,7 +150,7 @@
                         <a href="#" class="button">Devices</a>
                     </div>
                 </div>
-                <div class="Social-info">
+                <div class="social-info">
                     <h2 class="main-box-heading">Social Info</h2>
                     <p class="main-box-paragraph">Social Media Information</p>
                     <div class="social-box">
@@ -158,16 +158,16 @@
                         <input type="text" placeholder="Twitter Username">
                     </div>
                     <div class="social-box">
-                        <i class="fa-brands fa-twitter fa-lg"></i>
-                        <input type="text" placeholder="Twitter Username">
+                        <i class="fa-brands fa-facebook fa-lg"></i>
+                        <input type="text" placeholder="facebook Username">
                     </div>
                     <div class="social-box">
-                        <i class="fa-brands fa-twitter fa-lg"></i>
-                        <input type="text" placeholder="Twitter Username">
+                        <i class="fa-brands fa-linkedin fa-lg"></i>
+                        <input type="text" placeholder="Linkedin Username">
                     </div>
                     <div class="social-box">
-                        <i class="fa-brands fa-twitter fa-lg"></i>
-                        <input type="text" placeholder="Twitter Username">
+                        <i class="fa-brands fa-youtube fa-lg"></i>
+                        <input type="text" placeholder="youtube Username">
                     </div>
                 </div>
             </div>
