--- a/settings.html
+++ b/settings.html
@@ -170,6 +170,74 @@
                         <input type="text" placeholder="youtube Username">
                     </div>
                 </div>
+                <div class="widgets-control">
+                    <h2 class="main-box-heading">Widgets Control</h2>
+                    <p class="main-box-paragraph">Show/Hide Widgets</p>
+                    <div class="control">
+                        <input type="checkbox" id="one">
+                        <label for="one">Quick Draft</label>
+                    </div>
+                    <div class="control">
+                        <input type="checkbox" id="two">
+                        <label for="two">Yearly Target</label>
+                    </div>
+                    <div class="control">
+                        <input type="checkbox" id="three">
+                        <label for="three">Tickets Statistics</label>
+                    </div>
+                    <div class="control">
+                        <input type="checkbox" id="four">
+                        <label for="four">My Activities</label>
+                    </div>
+                    <div class="control">
+                        <input type="checkbox" id="five">
+                        <label for="five">Latest news</label>
+                    </div>
+                    <div class="control">
+                        <input type="checkbox" id="six">
+                        <label for="six">Top Search Items</label>
+                    </div>
+                </div>
+                <div class="backup-manager">
+                    <h2 class="main-box-heading">Backup Manager</h2>
+                    <p class="main-box-paragraph">Control Backup Time And Location</p>
+
+                    <div class="manage">
+                        <input type="radio" id="daily" name="time">
+                        <label for="daily">Daily</label>
+                    </div>
+                    <div class="manage">
+                        <input type="radio" id="weekly" name="time">
+                        <label for="weekly">Weekly</label>
+                    </div>
+                    <div class="manage">
+                        <input type="radio" id="monthly" name="time">
+                        <label for="monthly">Monthly</label>
+                    </div>
+                    <div class="servers">
+                        <input type="radio" name="servers" id="server-one">
+                        <div class="server">
+                            <label for="server-one">
+                                <i class="fa-solid fa-server"></i>
+                                Megaman 
+                            </label>
+                        </div>
+                        <input type="radio" name="servers" id="server-two">
+                        <div class="server">
+                            <label for="server-two">
+                                <i class="fa-solid fa-server"></i>
+                                Zero 
+                            </label>
+                        </div>
+                        <input type="radio" name="servers" id="server-three">
+                        <div class="server">
+                            <label for="server-three">
+                                <i class="fa-solid fa-server"></i>
+                                Sigma 
+                            </label>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
