--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="index.html">
+                    <a href="profile.html">
                         <i class="fa-solid fa-user"></i>
                         <span>profile</span>
                     </a>
