finish team and projects sections

--- a/index.html
+++ b/index.html
@@ -43,33 +43,33 @@
                     </a>
                 </li>
                 <li>
-                    <a href="index.html">
+                    <a href="projects.html">
                         <i class="fa-solid fa-diagram-project"></i>
                         <span>projects</span>
                     </a>
                 </li>
                 <li>
-                    <a href="index.html">
+                    <a href="courses.html">
                         <i class="fa-solid fa-graduation-cap"></i>
                         <span>courses</span>
                     </a>
                 </li>
                 <li>
-                    <a href="index.html">
+                    <a href="team.html">
                         <i class="fa-solid fa-user-friends"></i>
-                        <span>friends</span>
+                        <span>Team</span>
                     </a>
                 </li>
                 <li>
-                    <a href="index.html">
+                    <a href="files.html">
                         <i class="fa-solid fa-file"></i>
                         <span>Files</span>
                     </a>
                 </li>
                 <li>
-                    <a href="index.html">
+                    <a href="plans.html">
                         <i class="fa-solid fa-credit-card"></i>
-                        <span>Dashboard</span>
+                        <span>Plans</span>
                     </a>
                 </li>
             </ul>
