--- a/profile.html
+++ b/profile.html
@@ -37,7 +37,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="profile.html" class="active">
+                    <a class="active" href="profile.html">
                         <i class="fa-solid fa-user"></i>
                         <span>profile</span>
                     </a>
@@ -55,9 +55,9 @@
                     </a>
                 </li>
                 <li>
-                    <a href="friends.html">
+                    <a href="team.html">
                         <i class="fa-solid fa-user-friends"></i>
-                        <span>friends</span>
+                        <span>Team</span>
                     </a>
                 </li>
                 <li>
@@ -67,9 +67,9 @@
                     </a>
                 </li>
                 <li>
-                    <a href="dashboard.html">
+                    <a href="plans.html">
                         <i class="fa-solid fa-credit-card"></i>
-                        <span>Dashboard</span>
+                        <span>Plans</span>
                     </a>
                 </li>
             </ul>
@@ -95,7 +95,6 @@
                         <img src="imgs/avatar.jpg" alt="">
                         <h3>Khodor Shhoury</h3>
                         <p class="level">Level 20</p>
-                    
                     <div class="level-progress">
                         <span style="width: 70%"></span>
                     </div>
