--- a/settings.html
+++ b/settings.html
@@ -55,9 +55,9 @@
                     </a>
                 </li>
                 <li>
-                    <a href="friends.html">
+                    <a href="team.html">
                         <i class="fa-solid fa-user-friends"></i>
-                        <span>friends</span>
+                        <span>Team</span>
                     </a>
                 </li>
                 <li>
@@ -67,9 +67,9 @@
                     </a>
                 </li>
                 <li>
-                    <a href="dashboard.html">
+                    <a href="plans.html">
                         <i class="fa-solid fa-credit-card"></i>
-                        <span>Dashboard</span>
+                        <span>Plans</span>
                     </a>
                 </li>
             </ul>
