finish files section

--- a/files.html
+++ b/files.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile</title>
+    <title>Files</title>
     <!-- normalize file  -->
     <link rel="stylesheet" href="css/normalize.css">
      <!-- include fontawesome -->
@@ -134,160 +134,162 @@
                     </div>
                     <a href="#" class="upload"> <i class="fa-solid fa-angles-up"></i> Upload</a>
                 </div>
-                <div class="file">
-                    <i class="fa-solid fa-download"></i>
-                    <div class="icon">
-                        <img src="/imgs/pdf.svg" alt="">
+                <div class="files">
+                    <div class="file">
+                        <i class="fa-solid fa-download"></i>
+                        <div class="icon">
+                            <img src="/imgs/pdf.svg" alt="">
+                        </div>
+                        <div class="file-name">my-file.pdf</div>
+                        <p class="name">khodor</p>
+                        <div class="info">
+                            <span>20/06/2020</span>
+                            <span>5.5MB</span>
+                        </div>
                     </div>
-                    <div class="file-name">my-file.pdf</div>
-                    <p class="name">khodor</p>
-                    <div class="info">
-                        <span>20/06/2020</span>
-                        <span>5.5MB</span>
+                    <div class="file">
+                        <i class="fa-solid fa-download"></i>
+                        <div class="icon">
+                            <img src="/imgs/avi.svg" alt="">
+                        </div>
+                        <div class="file-name">my-file.avi</div>
+                        <p class="name">khodor</p>
+                        <div class="info">
+                            <span>20/06/2020</span>
+                            <span>5.5MB</span>
+                        </div>
                     </div>
-                </div>
-                <div class="file">
-                    <i class="fa-solid fa-download"></i>
-                    <div class="icon">
-                        <img src="/imgs/avi.svg" alt="">
+                    <div class="file">
+                        <i class="fa-solid fa-download"></i>
+                        <div class="icon">
+                            <img src="/imgs/eps.svg" alt="">
+                        </div>
+                        <div class="file-name">my-file.eps</div>
+                        <p class="name">khodor</p>
+                        <div class="info">
+                            <span>20/06/2020</span>
+                            <span>5.5MB</span>
+                        </div>
                     </div>
-                    <div class="file-name">my-file.avi</div>
-                    <p class="name">khodor</p>
-                    <div class="info">
-                        <span>20/06/2020</span>
-                        <span>5.5MB</span>
+                    <div class="file">
+                        <i class="fa-solid fa-download"></i>
+                        <div class="icon">
+                            <img src="/imgs/psd.svg" alt="">
+                        </div>
+                        <div class="file-name">my-file.psd</div>
+                        <p class="name">khodor</p>
+                        <div class="info">
+                            <span>20/06/2020</span>
+                            <span>5.5MB</span>
+                        </div>
                     </div>
-                </div>
-                <div class="file">
-                    <i class="fa-solid fa-download"></i>
-                    <div class="icon">
-                        <img src="/imgs/eps.svg" alt="">
+                    <div class="file">
+                        <i class="fa-solid fa-download"></i>
+                        <div class="icon">
+                            <img src="/imgs/dll.svg" alt="">
+                        </div>
+                        <div class="file-name">my-file.dll</div>
+                        <p class="name">khodor</p>
+                        <div class="info">
+                            <span>20/06/2020</span>
+                            <span>5.5MB</span>
+                        </div>
                     </div>
-                    <div class="file-name">my-file.eps</div>
-                    <p class="name">khodor</p>
-                    <div class="info">
-                        <span>20/06/2020</span>
-                        <span>5.5MB</span>
+                    <div class="file">
+                        <i class="fa-solid fa-download"></i>
+                        <div class="icon">
+                            <img src="/imgs/png.svg" alt="">
+                        </div>
+                        <div class="file-name">my-file.png</div>
+                        <p class="name">khodor</p>
+                        <div class="info">
+                            <span>20/06/2020</span>
+                            <span>5.5MB</span>
+                        </div>
                     </div>
-                </div>
-                <div class="file">
-                    <i class="fa-solid fa-download"></i>
-                    <div class="icon">
-                        <img src="/imgs/psd.svg" alt="">
+                    <div class="file">
+                        <i class="fa-solid fa-download"></i>
+                        <div class="icon">
+                            <img src="/imgs/pdf.svg" alt="">
+                        </div>
+                        <div class="file-name">my-file.pdf</div>
+                        <p class="name">khodor</p>
+                        <div class="info">
+                            <span>20/06/2020</span>
+                            <span>5.5MB</span>
+                        </div>
                     </div>
-                    <div class="file-name">my-file.psd</div>
-                    <p class="name">khodor</p>
-                    <div class="info">
-                        <span>20/06/2020</span>
-                        <span>5.5MB</span>
+                    <div class="file">
+                        <i class="fa-solid fa-download"></i>
+                        <div class="icon">
+                            <img src="/imgs/png.svg" alt="">
+                        </div>
+                        <div class="file-name">my-file.png</div>
+                        <p class="name">khodor</p>
+                        <div class="info">
+                            <span>20/06/2020</span>
+                            <span>5.5MB</span>
+                        </div>
                     </div>
-                </div>
-                <div class="file">
-                    <i class="fa-solid fa-download"></i>
-                    <div class="icon">
-                        <img src="/imgs/dll.svg" alt="">
+                    <div class="file">
+                        <i class="fa-solid fa-download"></i>
+                        <div class="icon">
+                            <img src="/imgs/psd.svg" alt="">
+                        </div>
+                        <div class="file-name">my-file.psd</div>
+                        <p class="name">khodor</p>
+                        <div class="info">
+                            <span>20/06/2020</span>
+                            <span>5.5MB</span>
+                        </div>
                     </div>
-                    <div class="file-name">my-file.dll</div>
-                    <p class="name">khodor</p>
-                    <div class="info">
-                        <span>20/06/2020</span>
-                        <span>5.5MB</span>
+                    <div class="file">
+                        <i class="fa-solid fa-download"></i>
+                        <div class="icon">
+                            <img src="/imgs/avi.svg" alt="">
+                        </div>
+                        <div class="file-name">my-file.avi</div>
+                        <p class="name">khodor</p>
+                        <div class="info">
+                            <span>20/06/2020</span>
+                            <span>5.5MB</span>
+                        </div>
                     </div>
-                </div>
-                <div class="file">
-                    <i class="fa-solid fa-download"></i>
-                    <div class="icon">
-                        <img src="/imgs/png.svg" alt="">
+                    <div class="file">
+                        <i class="fa-solid fa-download"></i>
+                        <div class="icon">
+                            <img src="/imgs/dll.svg" alt="">
+                        </div>
+                        <div class="file-name">my-file.dll</div>
+                        <p class="name">khodor</p>
+                        <div class="info">
+                            <span>20/06/2020</span>
+                            <span>5.5MB</span>
+                        </div>
                     </div>
-                    <div class="file-name">my-file.png</div>
-                    <p class="name">khodor</p>
-                    <div class="info">
-                        <span>20/06/2020</span>
-                        <span>5.5MB</span>
+                    <div class="file">
+                        <i class="fa-solid fa-download"></i>
+                        <div class="icon">
+                            <img src="/imgs/eps.svg" alt="">
+                        </div>
+                        <div class="file-name">my-file.eps</div>
+                        <p class="name">khodor</p>
+                        <div class="info">
+                            <span>20/06/2020</span>
+                            <span>5.5MB</span>
+                        </div>
                     </div>
-                </div>
-                <div class="file">
-                    <i class="fa-solid fa-download"></i>
-                    <div class="icon">
-                        <img src="/imgs/pdf.svg" alt="">
-                    </div>
-                    <div class="file-name">my-file.pdf</div>
-                    <p class="name">khodor</p>
-                    <div class="info">
-                        <span>20/06/2020</span>
-                        <span>5.5MB</span>
-                    </div>
-                </div>
-                <div class="file">
-                    <i class="fa-solid fa-download"></i>
-                    <div class="icon">
-                        <img src="/imgs/png.svg" alt="">
-                    </div>
-                    <div class="file-name">my-file.png</div>
-                    <p class="name">khodor</p>
-                    <div class="info">
-                        <span>20/06/2020</span>
-                        <span>5.5MB</span>
-                    </div>
-                </div>
-                <div class="file">
-                    <i class="fa-solid fa-download"></i>
-                    <div class="icon">
-                        <img src="/imgs/psd.svg" alt="">
-                    </div>
-                    <div class="file-name">my-file.psd</div>
-                    <p class="name">khodor</p>
-                    <div class="info">
-                        <span>20/06/2020</span>
-                        <span>5.5MB</span>
-                    </div>
-                </div>
-                <div class="file">
-                    <i class="fa-solid fa-download"></i>
-                    <div class="icon">
-                        <img src="/imgs/avi.svg" alt="">
-                    </div>
-                    <div class="file-name">my-file.avi</div>
-                    <p class="name">khodor</p>
-                    <div class="info">
-                        <span>20/06/2020</span>
-                        <span>5.5MB</span>
-                    </div>
-                </div>
-                <div class="file">
-                    <i class="fa-solid fa-download"></i>
-                    <div class="icon">
-                        <img src="/imgs/dll.svg" alt="">
-                    </div>
-                    <div class="file-name">my-file.dll</div>
-                    <p class="name">khodor</p>
-                    <div class="info">
-                        <span>20/06/2020</span>
-                        <span>5.5MB</span>
-                    </div>
-                </div>
-                <div class="file">
-                    <i class="fa-solid fa-download"></i>
-                    <div class="icon">
-                        <img src="/imgs/eps.svg" alt="">
-                    </div>
-                    <div class="file-name">my-file.eps</div>
-                    <p class="name">khodor</p>
-                    <div class="info">
-                        <span>20/06/2020</span>
-                        <span>5.5MB</span>
-                    </div>
-                </div>
-                <div class="file">
-                    <i class="fa-solid fa-download"></i>
-                    <div class="icon">
-                        <img src="/imgs/psd.svg" alt="">
-                    </div>
-                    <div class="file-name">my-file.psd</div>
-                    <p class="name">khodor</p>
-                    <div class="info">
-                        <span>20/06/2020</span>
-                        <span>5.5MB</span>
+                    <div class="file">
+                        <i class="fa-solid fa-download"></i>
+                        <div class="icon">
+                            <img src="/imgs/psd.svg" alt="">
+                        </div>
+                        <div class="file-name">my-file.psd</div>
+                        <p class="name">khodor</p>
+                        <div class="info">
+                            <span>20/06/2020</span>
+                            <span>5.5MB</span>
+                        </div>
                     </div>
                 </div>
             </div>
